# solana-http-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: handlers.rs  main.rs  types.rs  utils.rs
